# modelbox-solutions

./: CMakeLists.txt  README.md
CMake/: Function.cmake  PreDownload.cmake
package/: CMakeLists.txt
solutions/: CMakeLists.txt
solutions/hand_pose_detection/: CMakeLists.txt
solutions/hand_pose_detection/flowunit/collapse_hand_pose/: CMakeLists.txt  collapse_hand_pose.py  collapse_hand_pose.toml
solutions/hand_pose_detection/flowunit/draw_hand_pose/: CMakeLists.txt  draw_hand_pose.py  draw_hand_post.toml
solutions/hand_pose_detection/flowunit/expand_box/: CMakeLists.txt  expand_box.py  expand_box.toml
solutions/hand_pose_detection/flowunit/generate_result/: CMakeLists.txt  generate_result.py  generate_result.toml
solutions/hand_pose_detection/flowunit/hand_detection/: CMakeLists.txt  hand_detection.toml
solutions/hand_pose_detection/flowunit/hand_pose_detection/: CMakeLists.txt  hand_pose_detection.toml
solutions/hand_pose_detection/flowunit/yolo_post/: CMakeLists.txt  yolox_post.py  yolox_post.toml  yolox_utils.py
solutions/hand_pose_detection/graph/: CMakeLists.txt  hand_pose_detection.toml
